# cerebro

./: .gitignore  README.md  csv_extracter.py  observations-528725.csv  pyproject.toml  retriever.py
api/: app.py  init_db.py  interface.py  populate_embeddings.py
interface/: next.config.ts  package-lock.json  package.json  tailwind.config.js
interface/app/: layout.tsx  page.tsx
interface/components/: ImageUpload.tsx
pseudolabelling/: download_images.ipynb  generate_pseudo_labels.py  pseudo_labels.txt  shard.py  testing.ipynb  testing.py  train_on_pseudo_labels.py
scraper/: csv_extracter.py  iimage2datasetnotworking.py  image_urls.csv  retriever.py
training/: Download Dataset.ipynb  run.sh
training/2025_02_15-22_49_52-model_ViT-B-32-lr_0.0005-b_480-j_4-p_amp/: params.txt
youtube_scraper/: youtube_live_links.txt  youtube_live_scraper.py  youtube_scraper.py
